--- a/index.html
+++ b/index.html
@@ -23,3 +23,5 @@
 		<script src="script.js"></script>
 	</body>
 </html>
+
+<!-- WHAT THE HEEEEEEEEEEEEEELLLL OOOHHHH MAHHHH GAAAAHHHD NOO WAAYYAYYAYYAH>
